crates/nirvash-macros/tests/fixtures/derive_signature_invalid_filter.stderr
error: expected `self`
 --> tests/fixtures/derive_signature_invalid_filter.rs:4:20
  |
4 | #[signature(filter(value => value.ready))]
  |                    ^^^^^
